3.2.9 - 24/09/2017
Fixed:
- Strange dependency problem #97

3.2.8 - 06/08/2017
Fixed:
- BugFix: Package return after build

Updated:
- Build error message

3.2.7 - 09/04/2017
Updated:
- Alien's repositories {alien, ktown, multi} #83 (Thanks to travis-82)
- Rworkman's repository {rlw} #83
- Package security message for network and sbo repository

Added:
- Sbosrcarch as secondary repository for source files #82 (Thanks to
travis-82)
- Rebuild packages from sbo repository when upgrading #85 (Thanks to bhreach)

3.2.6 - 22/02/2017
Updated:
- Pattern for configuration file

Added:
- Support the special packages who need attention (OpenGL 32-Bits Libs after
upgrade #81) Thanks to Edward W. Koenig and Inukaze for the report
- pkg_security configuration file

3.2.5 - 17/02/2017
Updated:
- Url for mles/mled repository (Thanks Kiki Novak for the report)
- Switch to arch i586 for sbo repository
- Switch off progress bar by default

Fixed:
- Exit codes - another scenario of #73 #79

3.2.4 - 10/02/2017
Updated:
- Switch SlackBuild script to arch i586
- Rename repository slackr to conrad
- Repository MATE to support Slackware -current x86_64

Added:
- Repository Cinnamon
- Repository Connochaetos (slack-n-free)
- Repository Microlinux {desktop, server, extras}

Fixed:
- Upgrade package lists
- Mate repository check for updates

3.2.3 - 07/02/2017
Updated:
- Copyright year
- Slackware mirrors

Fixed:
- Update package lists after fresh installation (IOError: [Errno 2] No such file
or directory)

3.2.2 - 26/10/2016
Added:
- Support Python3 with 2to3 tool.
- Build and install with Python 3

3.2.1 - 25/10/2016
Fixed:
- Return exit code when packages for installation not found #73

3.2.0 - 19/10/2016
Added:
- rlworkman.deps dependencies configuration file
Fixed:
- BugFix: IndexError: list index out of range, for tracking arguments
Updated:
- Rworkman's (rlw) repository dependencies for Slackware 14.2

3.1.9 - 17/10/2016
Updated:
- Switch to default version 1.16 for msb repository